--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon node server.js",
     "format": "prettier --write ."
   },
   "repository": {
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/DIPAKK2310/Backend_lab#readme",
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "prettier": "3.6.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.2"
   }
 }
